# vuv

./: .gitignore  CMakeLists.txt
include/vuv/: application.h  application_states.h  datatypes.h  errors.h  gl_utils.h  input.h  input_keys.h  log.h  nuklear_sdl_gl3.h  render.h  vuv.h  window.h
resources/shaders/: shader.frag  shader.vert
src/: application.c  main.c
src/game/: vu_renderer.c  vu_renderer.h  vulib.h  window.c  window.h
src/input/: input.c
src/log/: log.c
src/render/: gl_utils.c  render.c
src/window/: window.c
